fix: add  margin so that the navigation bar does not overlap the content

--- a/apps/lychee_client/src/app/app.component.scss
+++ b/apps/lychee_client/src/app/app.component.scss
@@ -17,3 +17,6 @@
     max-width: 960px;
   }
 }
+.has-navbar {
+  margin-bottom: 64px;
+}
